@@ -1,3 +1,9 @@
+2016-02-24  Carl Hetherington  <cth@carlh.net>
+
+	* Various fixes to timeline behaviour.
+
+	* Fix download of certificates for CAT745 and CP850.
+
 2016-02-21  Carl Hetherington  <cth@carlh.net>
 
 	* Version 2.6.24 released.
